fixed new text overflow issue on edited captions

--- a/python-project/react-app/src/components/Posts/ViewSinglePost/ViewSinglePost.css
+++ b/python-project/react-app/src/components/Posts/ViewSinglePost/ViewSinglePost.css
@@ -93,6 +93,11 @@
     font-size: 12px;
 }
 
+#single-caption-comments div div {
+    overflow: scroll;
+    overflow-x: hidden;
+}
+
 ::-webkit-scrollbar {
     width: 0;
 }
